--- a/Views/Escuela/Index.cshtml
+++ b/Views/Escuela/Index.cshtml
@@ -9,4 +9,9 @@
 
 <h1>Escuela </h1>
 <h2>Nombre: @Model.Nombre</h2>
-<p><strong>Año Fundación: @Model.YearF</strong></p>
+<address>
+    <p>Dirección: @Model.Direccion</p>
+    <p>Country:@Model.Country</p>
+    <p>City: @Model.Country</p>
+</address>
+<p><strong>Año Fundación: @Model.FundationYear</strong></p>
