--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -12,5 +12,5 @@
 <strong>Desde la vista parcial</strong>
 @foreach (var asignatura in Model)
 {
-    <partial name="AsignaturaSimple" model="asignatura"/>
+    <partial name="ObjetoEscuelaSimple" model="asignatura"/>
 }
