Creaciones de vistas múltiples e instalación de EF

--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -10,7 +10,6 @@
 <h1>@ViewData["Title"] </h1>
 
 <strong>Desde la vista parcial</strong>
-@foreach (var asignatura in Model)
-{
-    <partial name="ObjetoEscuelaSimple" model="asignatura"/>
-}
+
+<partial name="ListaObjetosEscuela"/>
+
