The Model has been generated Escuela-Cursos-Asignaturas-Alumno-Notas with relationship to other entity into the model. Applied E with the convention

--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Asignatura>
+﻿@model IEnumerable<Asignatura>
 
 @* La frase anterior me obliga a tener un modelo fuertemente tipado *@
 
