To Organize the views for the Forms

--- a/Views/Curso/Index.cshtml
+++ b/Views/Curso/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model Alumno
+﻿@model Curso
 
 @* La frase anterior me obliga a tener un modelo fuertemente tipado *@
 
 @{
-    ViewData["Title"] = "Información Alumno";
+    ViewData["Title"] = "Información Curso";
 } 
 @* Todo lo que tengo entre el "@", es llamado a c#, codigo de C# *@
 
