--- a/Views/Curso/MultiCurso.cshtml
+++ b/Views/Curso/MultiCurso.cshtml
@@ -1,18 +1,14 @@
-﻿@model Alumno
+﻿@model IEnumerable<Curso>
 
 @* La frase anterior me obliga a tener un modelo fuertemente tipado *@
 
 @{
-    ViewData["Title"] = "Información Alumno";
+    ViewData["Title"] = "Información Cursos";
 } 
 @* Todo lo que tengo entre el "@", es llamado a c#, codigo de C# *@
 
 <h1>@ViewData["Title"] </h1>
 
-<strong>Desde la vista normal</strong>
-<p>
-    Nombre: @Model.Nombre
-    Id: @Model.Id
-</p>
 <strong>Desde la vista parcial</strong>
-<partial name="ObjetoEscuelaSimple" />
+
+<partial name="ListaObjetosEscuela"></partial>
