Create, Update and delete data from the model

--- a/Views/Curso/Index.cshtml
+++ b/Views/Curso/Index.cshtml
@@ -8,6 +8,7 @@
 @* Todo lo que tengo entre el "@", es llamado a c#, codigo de C# *@
 
 <h1>@ViewData["Title"] </h1>
+<h2>@ViewBag.MensajeExtra</h2>
 
 <strong>Desde la vista normal</strong>
 <p>
